--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a booking microservice",
   "main": "index.js",
   "scripts": {
-    "start" : "npx nodemon src/index.js"
+    "start": "npx nodemon src/index.js"
   },
   "author": "Subir Gupta",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
